# mdrb

./: .Rbuildignore  .gitignore  .lintr  404.html  CONTRIBUTE.html  CONTRIBUTE.md  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  cleanup  cleanup.win  configure  index.html  pkgdown.yml  search.json  sitemap.xml  test_build.sh
.github/workflows/: R-CMD-check.yaml  test-install.yaml
R/: api.R  extendr-wrappers.R  util.R
man/: Deconvoluter.Rd  Deconvolution.Rd  Lorentzian.Rd  Spectrum.Rd
news/: index.html
reference/: Deconvoluter.html  Deconvolution.html  Lorentzian.html  Spectrum.html  index.html
src/: .gitignore  Makevars  Makevars.win  entrypoint.c  mdrb-win.def
src/rust/: Cargo.toml  config.toml  mdrb_lib.rs  vendor.sh
src/rust/.cargo/: config.toml
src/rust/src/: aligner.rs  deconvoluter.rs  deconvolution.rs  lib.rs  lorentzian.rs  spectrum.rs
