[package]
name = "mdrb"
version = "0.1.0"
authors = ["Maximilian Sombke <sombkemaximilian@gmail.com>"]
edition = "2021"
rust-version = "1.78.0"
publish = false

[lib]
name = "_mdrb"
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.7.1"
metabodecon = { git = "https://github.com/SombkeMaximilian/metabodecon-rust", rev = "2f3b6bbe8c68b45917c5d8fbae50da67fe573a75", features = ["full"] }
serde_json = "1.0.140"
rmp-serde = "1.3.0"
