[package]
name = "mdrb"
version = "0.1.0"
authors = ["Maximilian Sombke <sombkemaximilian@gmail.com>"]
edition = "2021"
rust-version = "1.78.0"
publish = false

[lib]
name = "_mdrb"
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.8.0"
# metabodecon = { path = "./metabodecon", version = "0.1.0", features = ["full"] }
metabodecon = { git = "https://github.com/SombkeMaximilian/metabodecon-rust", rev = "9cfd0bbd718ffc16d333780a449407b25e5f6d84", features = ["full"] }
rayon = "1.10.0"
serde_json = "1.0.140"
rmp-serde = "1.3.0"

[profile.release]
panic = "abort"
